Bug 352498 - standard home folder should use folder-xxxx
Summary: standard home folder should use folder-xxxx
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL: https://dl.dropboxusercontent.com/u/1...
Keywords:
: 352715 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-09 21:34 UTC by andreas_k
Modified: 2015-10-22 07:26 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andreas_k 2015-09-09 21:34:57 UTC
when you install kubuntu and open dolphin ~/home there are folders for music, videos, downloads, .... see systemSettings path kcm.

Can Dolphin use folder-download, folder-sound, folder-videos instead of only the folder icon

I ask at Randa if it is an kubuntu or dolphin problem and it is look like an dolphin problem.

thanks

Reproducible: Always
Comment 1 Frank Reininghaus 2015-09-10 21:27:43 UTC
Thanks for the report. If I understand you correctly, then you suggest that these folders, which are created automatically for new users, get different icons? This is not a Dolphin issue. The process which creates these directories (which might be run by the distro?) should then create a .directory file inside each folder which specifies the icon.

The icons will then also be shown in the file dialog, Folder View and anywhere else where you can display folder contents (this could never be achieved by a change in Dolphin itself!).

Or did I misunderstand something?
Comment 2 andreas_k 2015-09-10 21:30:51 UTC
no that's right. the only problem is that I don't know where I should report the bug that it can be solved.
Comment 3 Frank Reininghaus 2015-09-10 21:38:37 UTC
(In reply to andreas_k from comment #2)
> no that's right. the only problem is that I don't know where I should report
> the bug that it can be solved.

That depends on who is responsible for creating these folders. I had thought that it might be the distro, but maybe there is something in KDE that I'm not aware of that creates these folders. Maybe someone else has an idea.
Comment 4 Harald Sitter 2015-09-11 10:47:32 UTC
kfileitem.cpp needs to map nonsense accordingly
Comment 5 Frank Reininghaus 2015-09-15 20:48:16 UTC
*** Bug 352715 has been marked as a duplicate of this bug. ***
Comment 6 Hussam Al-Tayeb 2015-09-15 21:00:16 UTC
According to my suggestion in Bug 352715, just check if ~/.config/user-dirs.dirs exists.
If it does, use specific icons for locations specified in that file as defaults (without writing to .directory files). It that file does not exist, show plain looking folder icons by default.

Then if the user customizes, .directory files are created and they override the default icons.
Basically reserve .directory files to customizations.
Comment 8 Harald Sitter 2015-10-22 07:26:19 UTC
Git commit 93d71cdd19a6a844363751bd0299205d00d9a3a6 by Harald Sitter.
Committed on 22/10/2015 at 07:26.
Pushed by sitter into branch 'master'.

add logic to use icons for default xdg user dirs

this acts as an additional fallback to mimetype iconing and .directory
overrides. xdg user dirs are relocatable and can change depending on user
locale as well as user configuration and additionally are used in a range
of different desktop environments making this a very runtime sort of
decision.
REVIEW: 125158
CHANGELOG: Using suitable icons for default folders in the user home
FIXED-IN: 5.16

M  +13   -0    autotests/kfileitemtest.cpp
M  +1    -0    autotests/kfileitemtest.h
M  +46   -2    src/core/kfileitem.cpp

http://commits.kde.org/kio/93d71cdd19a6a844363751bd0299205d00d9a3a6